# ocaml-zarr

./: .gitignore  README.md  dune-project  zarr-blosc.opam  zarr-eio.opam  zarr-sync.opam  zarr.opam
bench/: bench_codecs.ml  dune
lib/zarr/: array_repr.ml  chunk_grid.ml  chunk_key.ml  codec.ml  codec_intf.ml  codec_registry.ml  data_type.ml  dune  fill_value.ml  group_repr.ml  indexing.ml  metadata.ml  ndarray.ml  store.ml  zarr.ml  ztypes.ml
lib/zarr/codecs/: bytes_codec.ml  codecs.ml  crc32c.ml  gzip.ml  sharding.ml  transpose.ml  zstd_codec.ml
lib/zarr_blosc/: blosc.ml  blosc_stubs.c  dune  zarr_blosc.ml
lib/zarr_eio/: dune  filesystem_store.ml  memory_store.ml  zarr_eio.ml
lib/zarr_sync/: dune  filesystem_store.ml  memory_store.ml  zarr_sync.ml
test/: dune  qcheck_generators.ml  test_array.ml  test_chunk_grid.ml  test_chunk_key.ml  test_codecs.ml  test_data_type.ml  test_fill_value.ml  test_group.ml  test_integration.ml  test_metadata.ml  test_ndarray.ml  test_python_interop.ml  test_qcheck.ml  test_runner.ml  test_sharding.ml  test_spec_compliance.ml  test_store_filesystem.ml  test_store_memory.ml
test/gen_fixtures/: generate_fixtures.py  requirements.txt
test_blosc/: dune  test_blosc.ml
